Search API Solr search 1.x, dev (xx/xx/xxxx):
---------------------------------------------
- #2130827 by drunken monkey: Added additional Solr server information to the
  Server overview.
- #2126281 by drunken monkey: Update error handling according to the latest
  Search API change.
- #2127991 by drunken monkey: Fixed handling of negated fulltext keys.
- #2113943 by drunken monkey: Fixed clash in specifying the HTTP method for
  searches.
- #2127193 by jlapp: Fixed date field values returned for multi-index searches.
- #2122155 drunken monkey: Added the "Files" tab to contextual links.
- #1846860 by andrewbelcher, drclaw, drunken monkey, danielnolde: Added a way
  to easily define new dynamic field types.
- #2064377 by Nick_vh: Made configuration files compatible with Solr Cloud.
- #2107417 by Nick_vh: Fixed config files for Solr 4.5.

Search API Solr search 1.3 (10/23/2013):
----------------------------------------
- #2099683 by drunken monkey: Added support for 'virtual fields' in Views.
- #1997702 by ianthomas_uk, drunken monkey: Added "AUTO" mode for HTTP method.
- #2033913 by drunken monkey: Fixed small error in schema.xml.
- #2073441 by drunken monkey: Removed custom uninstall code for deleting
  dependent servers.
- #1882190 by corvus_ch, arnested, drunken monkey: Added optional index ID
  prefixes.

Search API Solr search 1.2 (09/01/2013):
----------------------------------------
- #1246730 by febbraro, maciej.zgadzaj, drunken monkey: Added a way to alter
  the Solr document when indexing.
- #2053553 by drunken monkey, andrewbelcher: Fixed spatial features with clean
  field identifiers.
- #2054373 by drunken monkey: Added the option to use clean field identifiers.
- #1992806 by drunken monkey: Documented problems with Solr 4.3+.
- #2045355 by drunken monkey, arpieb: Fixed result mapping of item IDs.
- #2050157 by izus: Fixed typo in stopwords.txt.

Search API Solr search 1.1 (07/21/2013):
----------------------------------------