@@ -5,8 +5,12 @@ solr.replication.pollInterval=00:00:60
 solr.replication.masterUrl=http://localhost:8983/solr
 solr.replication.confFiles=schema.xml,mapping-ISOLatin1Accent.txt,protwords.txt,stopwords.txt,synonyms.txt,elevate.xml
 solr.mlt.timeAllowed=2000
-# You should not set your luceneVersion to anything lower then your Solr Version.
+# You should not set your luceneMatchVersion to anything lower than your Solr
+# Version.
 solr.luceneMatchVersion=LUCENE_35
 solr.pinkPony.timeAllowed=-1
+# autoCommit after 10000 docs
 solr.autoCommit.MaxDocs=10000
+# autoCommit after 2 minutes
 solr.autoCommit.MaxTime=120000
+solr.contrib.dir=../../contrib
